:art: estilizar modal

--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -27,6 +27,8 @@
 
     <link rel="stylesheet" type="text/css" href="{% static 'core/estilos/novo-formulario.css' %}" />
 
+    <link rel="stylesheet" type="text/css" href="{% static 'core/estilos/registrar-progresso.css' %}" />
+
     <link rel="stylesheet" type="text/css" href="{% static 'core/estilos/alimentos.css' %}" />
     <link rel="stylesheet" type="text/css" href="{% static 'core/estilos/dieta.css' %}" />
 
