--- a/core/templates/core/alimentos.html
+++ b/core/templates/core/alimentos.html
@@ -76,7 +76,7 @@
       <div class="cabecalho-conteudo-principal">
         <h1>Alimentos</h1>
 
-        <button class="botao-padrao">Novo alimento</button>
+        <button class="botao-padrao" id="abrirModal">Novo alimento</button>
       </div>
 
       <div class="nav-tipos-de-alimentos">
