--- a/core/static/core/estilos/estilo-cadastrar-alimento.css
+++ b/core/static/core/estilos/estilo-cadastrar-alimento.css
@@ -7,6 +7,9 @@
     margin-left: 52px;
     margin-top: 36px;
 }
+.conteudo-topo-alimento .ph-x{
+    color: #000000;
+}
 .conteudo-topo-alimento h1{
     font-family: 'Roboto', sans-serif;
     font-size: 28px;
@@ -30,6 +33,8 @@
 .buttons-cadastrar-alimento{
     float: right;
     margin-right: 46px;
+    display: flex;
+    gap: 20px;
 }
 #botao-cancelar{
     border-radius: 10px;
@@ -79,6 +84,9 @@
 }
 .checkbox-substituto{
     padding-bottom: 38px;
+    display: flex;
+    gap: 6px;
+    align-items: center;
 }
 .porcao-alimento{
     display: flex;
