--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -28,6 +28,7 @@
     <link rel="stylesheet" type="text/css" href="{% static 'core/estilos/alimentos.css' %}" />
     <link rel="stylesheet" type="text/css" href="{% static 'core/estilos/dieta.css' %}" />
     <link rel="stylesheet" type="text/css" href="{% static 'core/estilos/estilo-cadastrar-paciente.css' %}" />
+    <script src="{% static 'core/js/modal.js' %}"></script>
 
     <script src="https://unpkg.com/@phosphor-icons/web"></script>
   </head>
