--- a/core/templates/core/alimentos.html
+++ b/core/templates/core/alimentos.html
@@ -46,6 +46,7 @@
 {% endblock %}
 
 {% block main %}
+<body>
   <main>
     <header>
       <nav class="breadcrumbs">
@@ -90,4 +91,6 @@
       {% endblock %}
     </section>
   </main>
+  {% include 'core/cadastrarAlimento.html' %} 
+</body>
 {% endblock %}
