--- a/core/templates/core/cadastrarAlimento.html
+++ b/core/templates/core/cadastrarAlimento.html
@@ -2,8 +2,7 @@
 {% load static %}
 
 {% block main %}
-<body>
-    <main class="cadastro-alimento">
+    <dialog class="cadastro-alimento" id="myModal">
         <div class="conteudo-topo-alimento">
             <h1>Cadastrar novo alimento</h1>
             <i class="ph ph-x"></i>
@@ -41,6 +40,6 @@
             <button id="botao-salvar" type="Salvar">Salvar</button>
         </div>
         </div>
-    </main>
+    </dialog>
 </body>
 {% endblock %}
