--- a/core/templates/core/cadastrarAlimento.html
+++ b/core/templates/core/cadastrarAlimento.html
@@ -5,7 +5,7 @@
     <dialog class="cadastro-alimento" id="myModal">
         <div class="conteudo-topo-alimento">
             <h1>Cadastrar novo alimento</h1>
-            <i class="ph ph-x"></i>
+            <button id="fecharModal"><i class="ph ph-x"></i></button>
         </div>
         <div class="labels-iniciais">
             <label>Nome</label>
