--- a/core/static/core/estilos/registrar-progresso.css
+++ b/core/static/core/estilos/registrar-progresso.css
@@ -11,33 +11,58 @@ dialog {
     border-radius: 10px;
     max-width: 715px;
     box-shadow: 0 0 1em rgb(0, 0, 0 / .8);
-    margin: 28px auto;
+    margin: auto;
     width: 100%;
-    height: 100%;
+    max-height: 776px;
+    position: relative;
+    padding: 34px 54px;
 }
 
-.topo-progresso-h1,
+.titulo-modal-container {
+    display: flex;
+    flex-direction: column;
+    gap: 21px;
+    font-family: 'Inter', sans-serif;
+    font-weight: bold;
+}
+
+.titulo-modal {
+    font-size: 20px;
+    color: black;
+}
+
+.titulo-card i {
+    color: #FF8D61;
+}
+
+.descricao-modal {
+    font-size: 14px;
+    color: #A8A8A8;
+}
+
+#fecharModal {
+    position: absolute;
+    border: none;
+    background-color: transparent;
+    margin: 24px 29px;
+    top: 0;
+    right: 0;
+}
+
+.titulo-alimento {
+    color: black;
+    font-weight: bold;
+    font-size: 14px;
+}
+
+.alimento {
+    color: black;
+    font-weight: 400;
+}
+
 .topo-progresso-h3 {
     margin-left: 36px;
     margin-top: 32px;
-}
-
-.topo-progresso-h1 {
-    display: flex;
-    justify-content: space-between;
-    margin-right: 24px;
-    margin-bottom: 21px;
-}
-
-.topo-progresso-h1 h1 {
-    color: #000;
-    font-family: 'Inter', sans-serif;
-    font-size: 20px;
-}
-
-.topo-progresso-h1 button {
-    border: none;
-    background-color: #FFFFFF;
 }
 
 .topo-progresso-h3 {
@@ -51,17 +76,17 @@ dialog {
 }
 
 .button-registrar-progresso {
-    margin-left: 36px;
-    margin-bottom: 50px;
     display: flex;
-    gap: 322px;
-    margin-right: 73px;
+    justify-content: space-between;
+    align-items: center;
+    margin: 50px auto;
 }
 
-.button-registrar-progresso h2 {
+#data {
     color: #000;
     font-family: 'Inter', sans-serif;
     font-size: 36px;
+    font-weight: bold;
 }
 
 .button-registrar-progresso a {
@@ -76,59 +101,72 @@ dialog {
     font-size: 14px;
 }
 
-.adicionar-info {
-    gap: 6px;
-    align-items: center;
+.botao-adicionar-info {
     display: flex;
+    align-items: center;
+    gap: 4px;
+    border: 0;
+    background-color: transparent;
+    color: #FF8D61;
+    font-family: 'Inter', sans-serif;
+    font-weight: bold;
+    font-size: 14px;
 }
 
-.progresso-do-cafe {
-    margin-bottom: 21px;
+.botao-adicionar-info:hover {
+    cursor: pointer;
 }
 
-.progresso-do-cafe,
-.progresso-do-almoco {
+.botao-adicionar-info i {
+    color: #FF8D61;
+}
+
+.card {
     border-radius: 10px;
     border: 1px solid #F4F3F3;
     background: #FFFFFF;
-    padding-top: 22px;
-    padding-left: 20px;
-    padding-bottom: 21px;
-    padding-right: 82px;
+    padding: 20px;
+    width: 100%;
+    margin: 21px auto;
     max-width: 572px;
-    margin-left: 32px;
 }
 
-.progresso-do-cafe label,
-.progresso-do-almoco label {
+.card label {
     color: #000;
     font-family: 'Inter', sans-serif;
     font-size: 14px;
 }
 
-.progresso-do-cafe input,
-.progresso-do-almoco input {
+.card input {
     width: 24px;
     height: 24px;
     color: #0C9A61;
 }
 
-.cafe-manha-icone {
+.titulo-card {
     display: flex;
     align-items: center;
     gap: 9px;
     padding-bottom: 24px;
+    font-weight: bold;
+    width: 100%;
 }
 
-.container-global-opcao {
+.conteudo-card {
     display: flex;
-    justify-content: space-between;
+    align-items: center;
+    gap: 19px;
+    width: 100%;
 }
 
 .container-opcao {
     display: flex;
     justify-content: space-between;
-    flex-direction: column;
+    align-items: center;
+    flex-wrap: wrap;
+    width: 100%;
+    max-width: 435px;
+    gap: 24px;
 }
 
 .opcao-alimento label {
@@ -136,16 +174,23 @@ dialog {
     flex-direction: column;
 }
 
-.opcao-alimento span {
-    padding-bottom: 6px;
-}
-
 .opcao-alimento {
+    align-items: center;
     display: flex;
-    gap: 10px;
+    gap: 14px;
+    align-items: center;
 }
 
-#botao-salvar {
+.footer-modal {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: end;
+    max-width: 572px;
+    margin: auto;
+}
+
+#botao-salvar-progresso {
     border-radius: 10px;
     background: #0C9A61;
     border: none;
@@ -154,12 +199,6 @@ dialog {
     font-size: 20px;
     width: 103px;
     height: 43px;
-}
-
-.buttons-progresso {
-    float: right;
-    padding-top: 37px;
-
 }
 
 #botao-cancelar {
@@ -172,10 +211,6 @@ dialog {
     font-family: 'Roboto', sans-serif;
     font-size: 20px;
     margin-right: 24px;
-}
-
-.ph-coffee {
-    color: #FF8D61;
 }
 
 .main-progresso dialog {
