:art: adicionar hover no botao de fechar modal

--- a/core/static/core/estilos/registrar-progresso.css
+++ b/core/static/core/estilos/registrar-progresso.css
@@ -49,6 +49,10 @@ dialog {
     right: 0;
 }
 
+#fecharModal:hover {
+    cursor: pointer;
+}
+
 .titulo-alimento {
     color: black;
     font-weight: bold;
