--- a/core/templates/core/home.html
+++ b/core/templates/core/home.html
@@ -1,5 +1,4 @@
 {% extends 'core/collapse.html' %}
-{% comment %} {% extends 'core/collapse.html' %} {% endcomment %}
 
 {% load static %}
 
@@ -47,6 +46,7 @@
 {% endblock %}
 
 {% block main %}
+<body>
   <main>
     <header>
       <nav class="breadcrumbs">
@@ -70,7 +70,7 @@
       <div class="cabecalho-conteudo-principal">
         <h1>Seus pacientes</h1>
 
-        <button class="botao-padrao">
+        <button class="botao-padrao" id="abrirModal">
           <i class="ph ph-user-circle-plus"></i>
           Novo paciente
         </button>
@@ -81,4 +81,6 @@
       {% endblock %}
     </section>
   </main>
+  {% include 'core/cadastrarPaciente.html' %} 
+</body>
 {% endblock %}
