--- a/core/templates/core/index.html
+++ b/core/templates/core/index.html
@@ -25,7 +25,7 @@
             <input type="password" />
           </div>
           <a id="input-esqueci-senha" href="#">Esqueci a senha</a>
-          <button id="botao-entrar" type="Entrar"><a href="/home">Entrar</a></button>
+          <a id="botao-entrar" href="/home">Entrar</a>
         </form>
       </div>
     </div>
