:art: ajuste em navegação

--- a/core/templates/core/novo-formulario.html
+++ b/core/templates/core/novo-formulario.html
@@ -7,7 +7,7 @@
     <header>
       <nav class="breadcrumbs">
         <div class="breadcrumb">
-          <a href="/">
+          <a href="/home">
             <i class="ph ph-house-line"></i>
             <span>Home /</span>
           </a>
