--- a/core/templates/core/alimentos.html
+++ b/core/templates/core/alimentos.html
@@ -8,7 +8,7 @@
 
     <ul>
       <li class="opcao-do-menu">
-        <a href="/">
+        <a href="/home">
           <i class="ph ph-house-line"></i>
           <span>Home</span>
         </a>
@@ -50,7 +50,7 @@
     <header>
       <nav class="breadcrumbs">
         <div class="breadcrumb">
-          <a href="/">
+          <a href="/home">
             <i class="ph ph-house-line"></i>
             <span>Home /</span>
           </a>
