ajeitado cor de comuns alimentos

--- a/core/templates/core/alimentos.html
+++ b/core/templates/core/alimentos.html
@@ -81,7 +81,7 @@
       </div>
 
       <div class="nav-tipos-de-alimentos">
-        <a href="/alimentos/comuns">Comuns</a>
+        <a href="/alimentos/comuns" class="selecionado-tipo-alimento">Comuns</a>
         <a href="/alimentos/substitutos">Substitutos</a>
         <hr />
       </div>
