--- a/core/static/core/estilos/estilo-cadastrar-paciente.css
+++ b/core/static/core/estilos/estilo-cadastrar-paciente.css
@@ -43,6 +43,7 @@
     display: flex;
     justify-content: space-between;
     margin-left: 46px;
+    gap: 28px;
 }
 .row-2-labels input{
     width: 265px;
