:art: arredondar modal

--- a/core/static/core/estilos/estilo-registrar-progresso.css
+++ b/core/static/core/estilos/estilo-registrar-progresso.css
@@ -1,70 +1,85 @@
-.main-progresso{
+.main-progresso {
     max-width: 715px;
     border: none;
+    margin: auto;
+    border-radius: 10px;
 }
+
 .topo-progresso-h1,
-.topo-progresso-h3{
+.topo-progresso-h3 {
     margin-left: 36px;
     margin-top: 32px;
 }
-.topo-progresso-h1{
+
+.topo-progresso-h1 {
     display: flex;
     justify-content: space-between;
     margin-right: 24px;
     margin-bottom: 21px;
 }
-.topo-progresso-h1 h1{
+
+.topo-progresso-h1 h1 {
     color: #000;
     font-family: 'Inter', sans-serif;
     font-size: 20px;
 }
-.topo-progresso-h1 button{
+
+.topo-progresso-h1 button {
     border: none;
     background-color: #FFFFFF;
 }
-.topo-progresso-h3{
+
+.topo-progresso-h3 {
     margin-top: 0px;
 }
-.topo-progresso-h3 h3{
+
+.topo-progresso-h3 h3 {
     color: #A8A8A8;
     font-family: 'Inter', sans-serif;
     font-size: 14px;
 }
-.button-registrar-progresso{
+
+.button-registrar-progresso {
     margin-left: 36px;
     margin-bottom: 50px;
     display: flex;
-    gap:322px;
+    gap: 322px;
     margin-right: 73px;
 }
-.button-registrar-progresso h2{
+
+.button-registrar-progresso h2 {
     color: #000;
     font-family: 'Inter', sans-serif;
     font-size: 36px;
 }
-.button-registrar-progresso a{
+
+.button-registrar-progresso a {
     text-decoration: none;
 }
+
 .button-registrar-progresso a,
 #label-de-cafe,
-#label-de-almoco{
+#label-de-almoco {
     color: #FF8D61;
     font-family: 'Inter', sans-serif;
     font-size: 14px;
 }
-.adicionar-info{
+
+.adicionar-info {
     gap: 6px;
     align-items: center;
     display: flex;
 }
-.progresso-do-cafe{
+
+.progresso-do-cafe {
     margin-bottom: 21px;
 }
+
 .progresso-do-cafe,
-.progresso-do-almoco{
+.progresso-do-almoco {
     border-radius: 10px;
     border: 1px solid #F4F3F3;
-    background:  #FFFFFF;
+    background: #FFFFFF;
     padding-top: 22px;
     padding-left: 20px;
     padding-bottom: 21px;
@@ -72,77 +87,90 @@
     max-width: 572px;
     margin-left: 32px;
 }
+
 .progresso-do-cafe label,
-.progresso-do-almoco label{
+.progresso-do-almoco label {
     color: #000;
-    font-family: 'Inter',sans-serif;
+    font-family: 'Inter', sans-serif;
     font-size: 14px;
 }
+
 .progresso-do-cafe input,
-.progresso-do-almoco input{
+.progresso-do-almoco input {
     width: 24px;
     height: 24px;
     color: #0C9A61;
 }
-.cafe-manha-icone{
+
+.cafe-manha-icone {
     display: flex;
     align-items: center;
     gap: 9px;
     padding-bottom: 24px;
 }
-.container-global-opcao{
+
+.container-global-opcao {
     display: flex;
     justify-content: space-between;
 }
-.container-opcao{
+
+.container-opcao {
     display: flex;
     justify-content: space-between;
     flex-direction: column;
 }
-.opcao-alimento label{
+
+.opcao-alimento label {
     display: flex;
     flex-direction: column;
 }
-.opcao-alimento span{
+
+.opcao-alimento span {
     padding-bottom: 6px;
 }
-.opcao-alimento{
+
+.opcao-alimento {
     display: flex;
     gap: 10px;
 }
-#botao-salvar{
+
+#botao-salvar {
     border-radius: 10px;
-    background:  #0C9A61;
+    background: #0C9A61;
     border: none;
-    color:  #FFFFFF;
+    color: #FFFFFF;
     font-family: 'Roboto', sans-serif;
     font-size: 20px;
     width: 103px;
     height: 43px;
 }
-.buttons-progresso{
+
+.buttons-progresso {
     float: right;
     padding-top: 37px;
 
 }
-#botao-cancelar{
+
+#botao-cancelar {
     border-radius: 10px;
     border: 1px solid #F4F3F3;
-    background:  #FFFFFF;
+    background: #FFFFFF;
     width: 103px;
     height: 43px;
-    color:  #141623;
+    color: #141623;
     font-family: 'Roboto', sans-serif;
     font-size: 20px;
     margin-right: 24px;
 }
-.ph-coffee{
+
+.ph-coffee {
     color: #FF8D61;
 }
-.main-progresso dialog{
-    margin: 0 auto; 
+
+.main-progresso dialog {
+    margin: 0 auto;
     position: fixed;
-    top: 50%; 
-    left: 50%; 
-    transform: translate(-50%, -50%); 
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
