--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -29,9 +29,10 @@
 
     <link rel="stylesheet" type="text/css" href="{% static 'core/estilos/alimentos.css' %}" />
     <link rel="stylesheet" type="text/css" href="{% static 'core/estilos/dieta.css' %}" />
+    <link rel="stylesheet" href="{% static 'core/estilos/estilo-diario.css' %}" />
+    <link rel="stylesheet" href="{% static 'core/estilos/estilo-registrar-progresso.css' %}" />
 
     <script src="https://unpkg.com/@phosphor-icons/web"></script>
-    <link rel="stylesheet" href="{% static 'estilos/estilo-diario.css' %}" />
   </head>
 
   <body>
