--- a/core/templates/core/registrarProgresso.html
+++ b/core/templates/core/registrarProgresso.html
@@ -6,16 +6,14 @@
     <button id="fecharModal"><i class="ph ph-x"></i></button>
     <div class="topo-progresso-h1">
       <h1>Registrar progresso</h1>
-    </div>
-    <div class="topo-progresso-h3">
       <h3>Faça seu registro de hoje no diário alimentar</h3>
     </div>
-    <div class="button-registrar-progresso">
-      <h2>26/09</h2>
-      <div class="adicionar-info">
+    <div class="informacao">
+      <p id="data">26/09</p>
+      <button class="botao-adicionar-info">
         <i class="ph ph-plus"></i>
-        <a href="adicionarInformacao.html">Adicionar informação</a>
-      </div>
+        Adicionar informação
+      </button>
     </div>
     <div class="progresso-do-cafe">
       <div class="cafe-manha-icone">
