:art: ajustar tamanho e posicionamento do card

--- a/core/static/core/estilos/estilo-registrar-progresso.css
+++ b/core/static/core/estilos/estilo-registrar-progresso.css
@@ -1,9 +1,11 @@
 .main-progresso {
     max-width: 715px;
+    width: fit-content;
     border: none;
     margin: auto;
     border-radius: 10px;
     position: relative;
+    width: 100%;
     padding: 34px 54px;
 }
 
@@ -93,32 +95,22 @@
     color: #FF8D61;
 }
 
-.progresso-do-cafe {
-    margin-bottom: 21px;
-}
-
-.progresso-do-cafe,
-.progresso-do-almoco {
+.card {
+    width: 100%;
+    max-width: 572px;
+    padding: 22px 20px;
     border-radius: 10px;
     border: 1px solid #F4F3F3;
-    background: #FFFFFF;
-    padding-top: 22px;
-    padding-left: 20px;
-    padding-bottom: 21px;
-    padding-right: 82px;
-    max-width: 572px;
-    margin-left: 32px;
+    margin: 0 auto 21px;
 }
 
-.progresso-do-cafe label,
-.progresso-do-almoco label {
+.card label {
     color: #000;
     font-family: 'Inter', sans-serif;
     font-size: 14px;
 }
 
-.progresso-do-cafe input,
-.progresso-do-almoco input {
+.card input {
     width: 24px;
     height: 24px;
     color: #0C9A61;
