--- a/core/templates/core/registrarProgresso.html
+++ b/core/templates/core/registrarProgresso.html
@@ -15,7 +15,7 @@
         Adicionar informação
       </button>
     </div>
-    <div class="progresso-do-cafe">
+    <div class="card">
       <div class="cafe-manha-icone">
         <i class="ph ph-coffee"></i>
         <p id="label-de-cafe">Café da manhã</p>
@@ -43,7 +43,7 @@
         </div>
       </div>
     </div>
-    <div class="progresso-do-almoco">
+    <div class="card">
       <div class="cafe-manha-icone">
         <i class="ph ph-coffee"></i>
         <p id="label-de-almoco">Almoço</p>
