--- a/core/templates/core/diarioAlimentar.html
+++ b/core/templates/core/diarioAlimentar.html
@@ -1,137 +1,140 @@
-{% extends "core/base.html" %}
+{% extends 'core/base.html' %}
 {% load static %}
 
 {% block main %}
-<body>
-        <main id="visualizar-diario">
-            <section id="container">
-                <section id="imagem-logo" class="topo-visualizar">
-                    <img src={% static 'imagens/Group 74.svg' %} alt="DietHub" id="logo">
-                </section>
-                <section id="perfil"class="topo-visualizar">
-                    <p>Karla Nunes</p>
-                    <p id="paciente">Paciente</p>
-                </section>
-            </section>
+  <body>
+    <main id="visualizar-diario">
+      <header>
+        <a href="#" class="logo"><img src="{% static 'imagens/logo-diet-hub.svg' %} " alt="Logo DietHub" /></a>
 
-            <section id="main-diario">
-                <h1>Diário alimentar</h1>
-                <p>Faça seu registro no diário alimentar. Clique no dia desejado</p>
-            </section>
-            <div id="conteudo-diario">
-                <section class="diario">
-                    <div class="datas">
-                        <div class="container-datas">
-                            <h1 class="dia-semana"id="selecionado-semana">Terça</h1>
-                            <h1 class="data" id="selecionado-dia">26</h1>
-                        </div>
-                        <hr class="linha-vertical">
-                    </div>
-                    <div class="container-registros">
-                        <div class="registros">
-                            <i class="ph ph-notepad"></i>
-                            <p>Ainda não há registros para esse dia</p>
-                        </div>
-                        <div class="button-registrar">
-                            <i class="ph ph-plus"></i>
-                            <button id="abrirModal" type="button">Registrar</button>
-                        </div>
-                    </div>
-                </section>
-                <section class="diario">
-                    <div class="datas">
-                        <div class="container-datas">
-                            <h1 class="dia-semana">Terça</h1>
-                            <h1 class="data">26</h1>
-                        </div>
-                        <hr class="linha-vertical">
-                    </div>
-                    <div class="container-registros">
-                        <div class="registros">
-                            <i class="ph ph-notepad"></i>
-                            <p>Ainda não há registros para esse dia</p>
-                        </div>
-                        <div class="button-registrar">
-                            <i class="ph ph-plus"></i>
-                            <button id="abrirModal" type="button">Registrar</button>
-                        </div>
-                    </div>
-                </section>
-                <section class="diario">
-                    <div class="datas">
-                        <div class="container-datas">
-                            <h1 class="dia-semana">Terça</h1>
-                            <h1 class="data">26</h1>
-                        </div>
-                        <hr class="linha-vertical">
-                    </div>
-                    <div class="container-registros">
-                        <div class="registros">
-                            <i class="ph ph-notepad"></i>
-                            <p>Ainda não há registros para esse dia</p>
-                        </div>
-                        <div class="button-registrar">
-                            <i class="ph ph-plus"></i>
-                            <button id="abrirModal" type="button">Registrar</button>
-                        </div>
-                    </div>
-                </section>
-                    <div class="mes">
-                        <p><strong>Setembro</strong></p>
-                    </div>
-                <section class="diario">
-                    <div class="datas">
-                        <div class="container-datas">
-                            <h1 class="dia-semana">Terça</h1>
-                            <h1 class="data">26</h1>
-                        </div>
-                        <hr class="linha-vertical">
-                    </div>
-                    <div class="container-registros">
-                        <div class="registros">
-                            <i class="ph ph-notepad"></i>
-                            <p>Ainda não há registros para esse dia</p>
-                        </div>
-                        <div class="button-registrar">
-                            <i class="ph ph-plus"></i>
-                            <button id="abrirModal" type="button">Registrar</button>
-                        </div>
-                    </div>
-                </section>
-                <section class="diario">
-                    <div class="datas">
-                        <div class="container-datas">
-                            <h1 class="dia-semana">Terça</h1>
-                            <h1 class="data">26</h1>
-                        </div>
-                        <hr class="linha-vertical">
-                    </div>
-                    <div class="container-registros">
-                        <div class="registros">
-                            <i class="ph ph-notepad"></i>
-                            <p>Ainda não há registros para esse dia</p>
-                        </div>
-                        <div class="button-registrar">
-                            <i class="ph ph-plus"></i>
-                            <button id="abrirModal" type="button">Registrar</button>
-                        </div>
-                    </div>
-                </section>
+        <div class="informacoes-do-usuario">
+          <div class="texto-informacoes-do-usuario">
+            <span class="nome-do-usuario">Karla Nunes</span>
+            <span class="tipo-de-usuario">Paciente</span>
+          </div>
+          <img src="{% static 'imagens/usuario.svg' %}" alt="Logo DietHub" />
+        </div>
+      </header>
+      <section id="main-diario">
+        <h1>Diário alimentar</h1>
+        <p>Faça seu registro no diário alimentar. Clique no dia desejado</p>
+      </section>
+      <div id="conteudo-diario">
+        <section class="diario">
+          <div class="datas">
+            <div class="container-datas">
+              <h1 class="dia-semana" id="selecionado-semana">Terça</h1>
+              <h1 class="data" id="selecionado-dia">26</h1>
             </div>
-        </main>
-        {% include 'core/registrarProgresso.html' %} 
-        <script>
-            document.addEventListener("DOMContentLoaded", function() {
-                const openModal = document.getElementById("abrirModal");
-                const modal = document.getElementById("myModal");
-                const closeButton = document.getElementById("fecharModal")
-                openModal.addEventListener("click", () => {
-                    modal.showModal();
-                });
-                closeButton.addEventListener("click", () => {
-                    modal.close();
-                });
-            });
-        </script>
-</body>
+            <hr class="linha-vertical" />
+          </div>
+          <div class="container-registros">
+            <div class="registros">
+              <i class="ph ph-notepad"></i>
+              <p>Ainda não há registros para esse dia</p>
+            </div>
+            <div class="button-registrar">
+              <i class="ph ph-plus"></i>
+              <button id="abrirModal" type="button">Registrar</button>
+            </div>
+          </div>
+        </section>
+        <section class="diario">
+          <div class="datas">
+            <div class="container-datas">
+              <h1 class="dia-semana">Terça</h1>
+              <h1 class="data">26</h1>
+            </div>
+            <hr class="linha-vertical" />
+          </div>
+          <div class="container-registros">
+            <div class="registros">
+              <i class="ph ph-notepad"></i>
+              <p>Ainda não há registros para esse dia</p>
+            </div>
+            <div class="button-registrar">
+              <i class="ph ph-plus"></i>
+              <button id="abrirModal" type="button">Registrar</button>
+            </div>
+          </div>
+        </section>
+        <section class="diario">
+          <div class="datas">
+            <div class="container-datas">
+              <h1 class="dia-semana">Terça</h1>
+              <h1 class="data">26</h1>
+            </div>
+            <hr class="linha-vertical" />
+          </div>
+          <div class="container-registros">
+            <div class="registros">
+              <i class="ph ph-notepad"></i>
+              <p>Ainda não há registros para esse dia</p>
+            </div>
+            <div class="button-registrar">
+              <i class="ph ph-plus"></i>
+              <button id="abrirModal" type="button">Registrar</button>
+            </div>
+          </div>
+        </section>
+        <div class="mes">
+          <p>
+            <strong>Setembro</strong>
+          </p>
+        </div>
+        <section class="diario">
+          <div class="datas">
+            <div class="container-datas">
+              <h1 class="dia-semana">Terça</h1>
+              <h1 class="data">26</h1>
+            </div>
+            <hr class="linha-vertical" />
+          </div>
+          <div class="container-registros">
+            <div class="registros">
+              <i class="ph ph-notepad"></i>
+              <p>Ainda não há registros para esse dia</p>
+            </div>
+            <div class="button-registrar">
+              <i class="ph ph-plus"></i>
+              <button id="abrirModal" type="button">Registrar</button>
+            </div>
+          </div>
+        </section>
+        <section class="diario">
+          <div class="datas">
+            <div class="container-datas">
+              <h1 class="dia-semana">Terça</h1>
+              <h1 class="data">26</h1>
+            </div>
+            <hr class="linha-vertical" />
+          </div>
+          <div class="container-registros">
+            <div class="registros">
+              <i class="ph ph-notepad"></i>
+              <p>Ainda não há registros para esse dia</p>
+            </div>
+            <div class="button-registrar">
+              <i class="ph ph-plus"></i>
+              <button id="abrirModal" type="button">Registrar</button>
+            </div>
+          </div>
+        </section>
+      </div>
+    </main>
+    {% include 'core/registrarProgresso.html' %}
+    <script>
+      document.addEventListener('DOMContentLoaded', function () {
+        const openModal = document.getElementById('abrirModal')
+        const modal = document.getElementById('myModal')
+        const closeButton = document.getElementById('fecharModal')
+        openModal.addEventListener('click', () => {
+          modal.showModal()
+        })
+        closeButton.addEventListener('click', () => {
+          modal.close()
+        })
+      })
+    </script>
+  </body>
 {% endblock %}
