--- a/core/static/core/estilos/estilo-diario.css
+++ b/core/static/core/estilos/estilo-diario.css
@@ -1,110 +1,138 @@
-#main-diario p{
-    color:#A8A8A8;
+#main-diario p {
+    color: #A8A8A8;
     font-family: 'Inter', sans-serif;
     font-size: 14px;
 }
-#main-diario{
+
+#main-diario {
     font-family: 'Inter', sans-serif;
-    font-size: 22px;   
-    color:#000;
+    font-size: 22px;
+    color: #000;
 }
-#main-diario h1{
+
+#main-diario h1 {
     padding-bottom: 20px;
+    font-size: 22px;
+    font-weight: bold;
 }
+
 #main-diario,
 #conteudo-diario {
     margin: auto;
 }
-#main-diario{
+
+#main-diario {
     max-width: 824px;
 }
-#main-diario p{
+
+#main-diario p {
     margin-bottom: 28px;
+    font-size: 14px;
+    font-weight: bold;
 }
-#conteudo-diario{
+
+#conteudo-diario {
     border-radius: 10px;
     border: 1px solid #F4F3F3;
-    background:  #FFFFFF;
-    width: 824px;
+    background: #FFFFFF;
+    max-width: 824px;
     padding-top: 31px;
-    padding-bottom: 89px;
-}
-.diario{
     display: flex;
-    gap: 46px;
-    width: 740px;
-    padding-bottom: 24px;
+    flex-direction: column;
+    align-items: center;
+    gap: 24px;
+}
 
-}
-#datas,
-.datas{
-    margin-left: 62px;
-}
-.datas{
+.dia {
     display: flex;
-    gap:33px;
+    max-width: 740px;
+    padding: 12px 20px;
+    border-radius: 10px;
+    border: 1px solid #F4F3F3;
+    width: 100%;
+    font-weight: bold;
+}
+
+.datas {
+    display: flex;
+    align-items: center;
+    gap: 33px;
     max-width: 80px;
     width: 100%;
 }
-.data{
+
+.data {
     margin-top: 6px;
 }
-.dia-semana,
-.registros,
-.button-registrar{
-    margin-bottom: 20px;
-}
+
 #selecionado-semana,
-#selecionado-dia{
+#selecionado-dia {
     color: #0C9A61;
 }
-.dia-semana{
+
+.dia-semana {
     font-family: 'Inter', sans-serif;
     font-size: 14px;
     margin-bottom: 0px;
 }
-.linha-vertical{
+
+.container-datas {
+    text-align: center;
+}
+
+.linha-vertical {
     height: 51px;
     color: #F4F3F3;
+    background-color: #F4F3F3;
 }
-.container-registros{
+
+.container-registros {
     display: flex;
     justify-content: space-between;
     width: 100%;
 }
-.registros{
+
+.registros {
     display: flex;
     align-items: center;
     font-family: 'Inter', sans-serif;
     font-size: 12px;
     gap: 4px;
+    flex: 1;
 }
-.registros p{
+
+.registros p {
     color: #A8A8A8;
 }
-.button-registrar a{
-    color:#FF8D61;
+
+.button-registrar a {
+    color: #FF8D61;
     text-decoration: none;
 }
-.button-registrar{
+
+.button-registrar {
     display: flex;
     align-items: center;
     gap: 4px;
 }
-.ph-notepad{
-    color:#A8A8A8;
+
+.ph-notepad {
+    color: #A8A8A8;
 }
-.ph-plus{
+
+.ph-plus {
     color: #FF8D61;
 }
-.button-registrar button{
+
+.button-registrar button {
     border: none;
     background: #ffff;
     color: #FF8D61;
     font-family: 'Inter', sans-serif;
     font-size: 12px;
 }
-.mes{
+
+.mes {
     margin-left: 42px;
     font-family: 'Inter', sans-serif;
     font-size: 14px;
