--- a/core/templates/core/diarioAlimentar.html
+++ b/core/templates/core/diarioAlimentar.html
@@ -20,13 +20,30 @@
         <p>Faça seu registro no diário alimentar. Clique no dia desejado</p>
       </section>
       <div id="conteudo-diario">
-        <section class="diario">
+        <section class="dia">
           <div class="datas">
             <div class="container-datas">
               <h1 class="dia-semana" id="selecionado-semana">Terça</h1>
               <h1 class="data" id="selecionado-dia">26</h1>
             </div>
-            <hr class="linha-vertical" />
+            {% comment %} <hr class="linha-vertical" /> {% endcomment %}
+          </div>
+          <div class="registros">
+            <i class="ph ph-notepad"></i>
+            <p>Ainda não há registros para esse dia</p>
+          </div>
+          <div class="button-registrar">
+            <i class="ph ph-plus"></i>
+            <button id="abrirModal" type="button">Registrar</button>
+          </div>
+        </section>
+        <section class="dia">
+          <div class="datas">
+            <div class="container-datas">
+              <h1 class="dia-semana">Terça</h1>
+              <h1 class="data">26</h1>
+            </div>
+            {% comment %} <hr class="linha-vertical" /> {% endcomment %}
           </div>
           <div class="container-registros">
             <div class="registros">
@@ -39,32 +56,13 @@
             </div>
           </div>
         </section>
-        <section class="diario">
+        <section class="dia">
           <div class="datas">
             <div class="container-datas">
               <h1 class="dia-semana">Terça</h1>
               <h1 class="data">26</h1>
             </div>
-            <hr class="linha-vertical" />
-          </div>
-          <div class="container-registros">
-            <div class="registros">
-              <i class="ph ph-notepad"></i>
-              <p>Ainda não há registros para esse dia</p>
-            </div>
-            <div class="button-registrar">
-              <i class="ph ph-plus"></i>
-              <button id="abrirModal" type="button">Registrar</button>
-            </div>
-          </div>
-        </section>
-        <section class="diario">
-          <div class="datas">
-            <div class="container-datas">
-              <h1 class="dia-semana">Terça</h1>
-              <h1 class="data">26</h1>
-            </div>
-            <hr class="linha-vertical" />
+            {% comment %} <hr class="linha-vertical" /> {% endcomment %}
           </div>
           <div class="container-registros">
             <div class="registros">
@@ -82,13 +80,13 @@
             <strong>Setembro</strong>
           </p>
         </div>
-        <section class="diario">
+        <section class="dia">
           <div class="datas">
             <div class="container-datas">
               <h1 class="dia-semana">Terça</h1>
               <h1 class="data">26</h1>
             </div>
-            <hr class="linha-vertical" />
+            {% comment %} <hr class="linha-vertical" /> {% endcomment %}
           </div>
           <div class="container-registros">
             <div class="registros">
@@ -101,13 +99,13 @@
             </div>
           </div>
         </section>
-        <section class="diario">
+        <section class="dia">
           <div class="datas">
             <div class="container-datas">
               <h1 class="dia-semana">Terça</h1>
               <h1 class="data">26</h1>
             </div>
-            <hr class="linha-vertical" />
+            {% comment %} <hr class="linha-vertical" /> {% endcomment %}
           </div>
           <div class="container-registros">
             <div class="registros">
